@@ -79,19 +79,20 @@ include_HEADERS = dwarf.h libdwarf.h
 
 CLEANFILES = ${GENSRCS}
 
-notrans_dist_man3_MANS = dwarf_add_AT_comp_dir.3				\
+notrans_dist_man3_MANS = dwarf.3						\
+	dwarf_add_arange.3				\
+	dwarf_add_AT_comp_dir.3				\
 	dwarf_add_AT_const_value_string.3		\
 	dwarf_add_AT_dataref.3				\
 	dwarf_add_AT_flag.3				\
 	dwarf_add_AT_location_expr.3			\
 	dwarf_add_AT_name.3				\
 	dwarf_add_AT_producer.3				\
-	dwarf_add_AT_reference.3			\
 	dwarf_add_AT_ref_address.3			\
+	dwarf_add_AT_reference.3			\
 	dwarf_add_AT_signed_const.3			\
 	dwarf_add_AT_string.3				\
 	dwarf_add_AT_targ_address.3			\
-	dwarf_add_arange.3				\
 	dwarf_add_die_to_debug.3			\
 	dwarf_add_directory_decl.3			\
 	dwarf_add_expr_addr.3				\
@@ -133,7 +134,6 @@ notrans_dist_man3_MANS = dwarf_add_AT_comp_dir.3				\
 	dwarf_formsig8.3				\
 	dwarf_formstring.3				\
 	dwarf_formudata.3				\
-	dwarf_get_AT_name.3				\
 	dwarf_get_abbrev.3				\
 	dwarf_get_abbrev_children_flag.3		\
 	dwarf_get_abbrev_code.3				\
@@ -141,8 +141,9 @@ notrans_dist_man3_MANS = dwarf_add_AT_comp_dir.3				\
 	dwarf_get_abbrev_tag.3				\
 	dwarf_get_address_size.3			\
 	dwarf_get_arange.3				\
-	dwarf_get_aranges.3				\
 	dwarf_get_arange_info.3				\
+	dwarf_get_aranges.3				\
+	dwarf_get_AT_name.3				\
 	dwarf_get_cie_index.3				\
 	dwarf_get_cie_info.3				\
 	dwarf_get_cie_of_fde.3				\
